# bolero

./: .gitignore  .rustfmt.toml  404.html  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  cli-installation.html  clippy.toml  getting-started.html  index.html  introduction.html  library-installation.html  print.html  searchindex.js  searchindex.json
bolero/: Cargo.toml
bolero-afl/: Cargo.toml  build.rs  update.sh
bolero-afl/afl/: afl-analyze.c  afl-as.c  afl-fuzz.c  afl-gcc.c  afl-gotcpu.c  afl-showmap.c  afl-tmin.c  test-instr.c
bolero-afl/src/: bolero-afl-util.h  lib.rs
bolero-engine/: Cargo.toml
bolero-engine/src/: lib.rs  panic.rs  rng.rs  shrink.rs  target_location.rs  test.rs  test_failure.rs  test_input.rs  test_result.rs
bolero-generator/: Cargo.toml  README.md
bolero-generator-derive/: Cargo.toml
bolero-generator-derive/src/: generator_attr.rs  lib.rs
bolero-generator/src/: arbitrary.rs  array.rs  atomic.rs  bool.rs  bounded.rs  char.rs  combinator.rs  driver.rs  lib.rs  num.rs  one_of.rs  range.rs  result.rs  rng.rs  string.rs  testing.rs  time.rs  tuple.rs  uniform.rs  vec.rs  with.rs
bolero-generator/src/alloc/: boxed.rs  collections.rs  mod.rs  string.rs  sync.rs
bolero-generator/src/driver/: bytes.rs  macros.rs  rng.rs
bolero-generator/src/std/: mod.rs
bolero-generator/tests/: derive_test.rs
bolero-honggfuzz/: Cargo.toml  build.rs  update.sh
bolero-honggfuzz/honggfuzz/: Makefile  honggfuzz.c
bolero-honggfuzz/src/: lib.rs
bolero-instrument/: Cargo.toml  build.rs
bolero-instrument/src/: allocations.rs  cycles.rs  dtrace_provider.c  dtrace_provider.d  dtrace_provider.h  histogram.rs  lib.rs  syscalls.rs  timing.rs
bolero-kani/: Cargo.toml
bolero-libfuzzer/: Cargo.toml  build.rs  fix-fork.patch  update.sh
bolero-libfuzzer/libfuzzer/: FuzzerCommand.h  FuzzerDataFlowTrace.cpp  FuzzerDriver.cpp  FuzzerFork.cpp  FuzzerMerge.cpp  FuzzerUtil.h  FuzzerUtilDarwin.cpp  FuzzerUtilFuchsia.cpp  FuzzerUtilLinux.cpp  FuzzerUtilPosix.cpp  FuzzerUtilWindows.cpp
bolero-libfuzzer/libfuzzer/tests/: FuzzerUnittest.cpp
bolero-libfuzzer/src/: FuzzerAPI.cpp  lib.rs
bolero-macros/: Cargo.toml
bolero-macros/src/: lib.rs
bolero-ravel/: Cargo.toml  README.md
bolero-ravel/src/: lib.rs
bolero-ravel/src/cli/: fuzz.rs  mod.rs  process.rs  reduce.rs  test_target.rs
bolero-ravel/src/engine/: callbacks.rs  mod.rs
bolero/src/: fuzz.rs  lib.rs  model.rs  shrink.rs  test.rs
bolero/src/test/: input.rs  mod.rs
book/: book.toml
cargo-bolero/: Cargo.toml  README.md  build.rs
cargo-bolero/src/: afl.rs  config.rs  engine.rs  flags.rs  fuzz.rs  fuzzer.rs  honggfuzz.rs  kani.rs  libfuzzer.rs  list.rs  main.rs  manifest.rs  new.rs  project.rs  ravel.rs  reduce.rs  rmc.rs  selection.rs  shrink.rs  test.rs  test_target.rs  util.rs
cargo-bolero/tests/fuzz_bytes/: main.rs
cargo-bolero/tests/fuzz_generator/: fuzz_target.rs
dev-docs/: build.html  index.html
examples/basic/: Cargo.toml
examples/basic/src/: lib.rs
examples/basic/tests/: other.rs
examples/basic/tests/fuzz_bytes/: fuzz_target.rs  main.rs
examples/basic/tests/fuzz_generator/: fuzz_target.rs  main.rs
examples/basic/tests/fuzz_operations/: fuzz_target.rs  main.rs
examples/basic/tests/fuzz_oracle/: main.rs
examples/boolean-tree/: Cargo.toml  README.md
examples/boolean-tree/src/: lib.rs  tests.rs
examples/reduced_bolero_test/: Cargo.toml  README.md
examples/reduced_bolero_test/src/: lib.rs
examples/rle-stack/: Cargo.toml  README.md
examples/rle-stack/src/: lib.rs  tests.rs
features/: cargo-integration.html  corpus-replay.html  index.html  input-shrinking.html  miri.html  private-testing.html  rust-stable.html  structural-testing.html  structured-testing.html  unified-fuzzing-interface.html  unified-interface.html  unit-testing.html
lib/bolero/: Cargo.toml
lib/bolero-afl/: Cargo.toml  update.sh
lib/bolero-afl/afl/: afl-analyze.c  afl-as.c  afl-showmap.c  test-instr.c
lib/bolero-afl/src/: lib.rs
lib/bolero-engine/: Cargo.toml
lib/bolero-engine/src/: any.rs  failure.rs  input.rs  lib.rs  panic.rs  result.rs  rng.rs  shrink.rs  target_location.rs  test.rs  test_input.rs
lib/bolero-engine/src/noop/: panic.rs
lib/bolero-engine/src/shrink/: tests.rs
lib/bolero-engine/src/target_location/: tests.rs
lib/bolero-generator/: Cargo.toml  README.md
lib/bolero-generator-derive/: Cargo.toml
lib/bolero-generator-derive/src/: generator_attr.rs  lib.rs
lib/bolero-generator/src/: any.rs  arbitrary.rs  array.rs  atomic.rs  bool.rs  bounded.rs  char.rs  combinator.rs  driver.rs  grammar.rs  kani.rs  lib.rs  net.rs  num.rs  one_of.rs  prelude.rs  range.rs  result.rs  testing.rs  time.rs  trace.rs  tuple.rs  uniform.rs
lib/bolero-generator/src/alloc/: boxed.rs  collections.rs  mod.rs  string.rs  sync.rs
lib/bolero-generator/src/any/: default.rs  kani.rs  tests.rs
lib/bolero-generator/src/any/snapshots/: bolero_generator__any__tests__any_test.snap  bolero_generator__any__tests__fill_any_test.snap  bolero_generator__any__tests__pick_test.snap  bolero_generator__any__tests__shuffle_test.snap
lib/bolero-generator/src/driver/: bytes.rs  cache.rs  exhaustive.rs  macros.rs  object.rs  options.rs  rng.rs
lib/bolero-generator/src/grammar/: shape.rs  state_space.rs  topology.rs
lib/bolero-generator/src/grammar/shape/: tree.rs  tree2.rs
lib/bolero-generator/src/grammar/topology/: generator.rs  selection.rs  tree.rs
lib/bolero-generator/src/grammar/topology/tree/: builder.rs  tests.rs
lib/bolero-generator/src/std/: mod.rs
lib/bolero-generator/tests/: derive_test.rs
lib/bolero-honggfuzz/: Cargo.toml  build.rs  update.sh
lib/bolero-honggfuzz/honggfuzz/: Makefile  honggfuzz.c
lib/bolero-honggfuzz/src/: lib.rs
lib/bolero-kani/: Cargo.toml
lib/bolero-kani/src/: lib.rs
lib/bolero-libafl/: Cargo.toml  build.rs
lib/bolero-libafl/runtime/: Cargo.toml.template
lib/bolero-libafl/runtime/src/: fuzz.rs  lib.rs
lib/bolero-libafl/src/: lib.rs
lib/bolero/src/: lib.rs  tests.rs
lib/bolero/src/test/: input.rs  mod.rs  outcome.rs  report.rs
(+59 files in other folders)
