[package]
name = "bolero-afl"
version = "0.1.1"
authors = ["Cameron Bytheway <bythewc@amazon.com>"]
description = "afl plugin for bolero"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "fuzz"]
license = "MIT"
edition = "2018"

[features]
bin = []

[build-dependencies]
cc = "1.0"
