[package]
name = "bolero-afl"
version = "0.4.0"
authors = ["Cameron Bytheway <bythewc@amazon.com>"]
description = "afl plugin for bolero"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "fuzz", "fuzzing"]
license = "MIT"
edition = "2018"
readme = "../README.md"

[features]
default = ["lib"]
bin = []
lib = ["bolero-engine"]

[dependencies]
bolero-engine = { version = "0.4", path = "../bolero-engine", optional = true }

[build-dependencies]
cc = "1.0"
