[package]
name = "bolero-engine"
version = "0.6.2"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "fuzz and property testing framework"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "quickcheck", "property", "fuzz", "fuzzing"]
license = "MIT"
edition = "2018"
readme = "../README.md"

[features]
default = ["rng"]
rng = ["rand"]

[dependencies]
anyhow = "1.0"
backtrace = "0.3"
bolero-generator = { version = "0.6", path = "../bolero-generator", default-features = false }
lazy_static = "1"
pretty-hex = "0.2.1"
rand = { version = "^0.8", optional = true }

[dev-dependencies]
bolero-generator = { version = "0.6", path = "../bolero-generator", features = ["std"] }
rand = "^0.8"
