[package]
name = "bolero-engine"
version = "0.8.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "fuzz and property testing framework"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "quickcheck", "property", "fuzz", "fuzzing"]
license = "MIT"
edition = "2018"
readme = "../README.md"

[dependencies]
anyhow = "1"
bolero-generator = { version = "0.8", path = "../bolero-generator", default-features = false }
lazy_static = "1"
pretty-hex = "0.2.1"

[target.'cfg(not(kani))'.dependencies]
backtrace = { version = "0.3" }

[target.'cfg(not(any(fuzzing, kani)))'.dependencies]
rand = { version = "^0.8" }

[dev-dependencies]
bolero-generator = { version = "0.8", path = "../bolero-generator", features = ["std"] }
rand = "^0.8"
