[package]
name = "bolero-engine"
version = "0.9.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "fuzz and property testing framework"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "quickcheck", "property", "fuzz", "fuzzing"]
license = "MIT"
edition = "2018"
readme = "../README.md"

[features]
rng = ["rand", "bolero-generator/alloc"]

[dependencies]
anyhow = "1"
bolero-generator = { version = "0.9", path = "../bolero-generator", default-features = false }
lazy_static = "1"
pretty-hex = "0.3"
rand = { version = "0.8", optional = true }

[target.'cfg(not(kani))'.dependencies]
backtrace = { version = "0.3" }

[dev-dependencies]
bolero-generator = { version = "0.9", path = "../bolero-generator", features = ["std"] }
rand = "^0.8"
