[package]
name = "bolero-generator-derive"
version = "0.8.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "value generator for testing and fuzzing"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "quickcheck", "property", "fuzz", "fuzzing"]
license = "MIT"
edition = "2018"
readme = "../bolero-generator/README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "1.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
