[package]
name = "bolero-generator"
version = "0.8.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "value generator for testing and fuzzing"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "quickcheck", "property", "fuzz", "fuzzing"]
license = "MIT"
edition = "2018"
readme = "README.md"

[features]
default = ["either", "std"]
std = ["alloc", "either/use_std"]
alloc = ["rand_core/alloc"]

[dependencies]
bolero-generator-derive = { version = "0.8.0", path = "../bolero-generator-derive" }
either = { version = "1.5", default-features = false, optional = true }
rand_core = { version = "^0.6", default-features = false }

[dev-dependencies]
rand = "^0.8"
