[package]
name = "bolero-honggfuzz"
version = "0.1.1"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "honggfuzz plugin for bolero"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "fuzz"]
license = "MIT"
edition = "2018"

[features]
bin = []
