[package]
name = "bolero-honggfuzz"
version = "0.3.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "honggfuzz plugin for bolero"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "fuzz", "fuzzing"]
license = "MIT"
edition = "2018"
readme = "../README.md"

[features]
bin = []

[dependencies]
bolero-generator = { version = "0.3", path = "../bolero-generator", default-features = false }
