[package]
name = "bolero-honggfuzz"
version = "0.4.1"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "honggfuzz plugin for bolero"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "fuzz", "fuzzing"]
license = "MIT"
edition = "2018"
readme = "../README.md"

[features]
default = ["lib"]
bin = []
lib = ["bolero-engine"]

[dependencies]
bolero-engine = { version = "0.4", path = "../bolero-engine", optional = true }
