[package]
name = "bolero-instrument"
version = "0.4.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "fuzz and property testing framework"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "quickcheck", "property", "fuzz", "fuzzing"]
license = "MIT"
edition = "2018"
readme = "../README.md"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
syscalls = ["libc", "fxhash"]

[dependencies]
byte-unit = "3.0.3"
hdrhistogram = { version = "7", default-features = false }
libc = { version = "0.2", optional = true }
quanta = "0.3"
plotters = { version = "0.2", default-features = false, features = ["area_series", "histogram", "point_series"] }
fxhash = { version = "0.2.1", optional = true }

[dev-dependencies]
libc = { version = "0.2" }
fxhash = { version = "0.2.1" }
plotters = { version = "0.2" }
rand = "0.7"

[build-dependencies]
cc = "1.0"
