[package]
name = "bolero-libfuzzer"
version = "0.6.2"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "libfuzzer plugin for bolero"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "fuzz", "fuzzing"]
license = "MIT"
edition = "2018"
readme = "../README.md"

[features]
default = ["lib"]
bin = []
lib = ["bolero-engine"]

[dependencies]
bolero-engine = { version = "0.6", path = "../bolero-engine", optional = true }

[build-dependencies]
cc = "1.0"
