[package]
name = "bolero"
version = "0.2.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "fuzz and property testing framework"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "quickcheck", "property", "fuzz", "fuzzing"]
license = "MIT"
edition = "2018"
readme = "../README.md"

[features]
default = ["std"]
std = ["alloc", "bolero-generator/std"]
alloc = ["bolero-generator/alloc"]

[dependencies]
backtrace = "0.3"
bolero-afl = { version = "0.2", path = "../bolero-afl" }
bolero-generator = { version = "0.2", path = "../bolero-generator", default-features = false }
bolero-honggfuzz = { version = "0.2", path = "../bolero-honggfuzz" }
bolero-libfuzzer = { version = "0.2", path = "../bolero-libfuzzer" }
cfg-if = "0.1"
lazy_static = "1"
libtest-mimic = "0.1.0"
