[package]
name = "bolero"
version = "0.6.1"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "fuzz and property testing front-end"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "quickcheck", "property", "fuzz", "fuzzing"]
license = "MIT"
edition = "2018"
readme = "../README.md"

[features]
default = ["std", "rng"]
rng = ["rand", "bolero-engine/rng"]
std = ["alloc", "bolero-generator/std"]
alloc = ["bolero-generator/alloc"]

[dependencies]
bolero-engine = { version = "0.6", path = "../bolero-engine" }
bolero-generator = { version = "0.6", path = "../bolero-generator", default-features = false }
cfg-if = "1"

[target.'cfg(fuzzing_afl)'.dependencies]
bolero-afl = { version = "0.6", path = "../bolero-afl" }

[target.'cfg(fuzzing_libfuzzer)'.dependencies]
bolero-libfuzzer = { version = "0.6", path = "../bolero-libfuzzer" }

[target.'cfg(fuzzing_honggfuzz)'.dependencies]
bolero-honggfuzz = { version = "0.6", path = "../bolero-honggfuzz" }

[target.'cfg(not(fuzzing))'.dependencies]
libtest-mimic = "0.3.0"
rand = { version = "^0.8", optional = true }

[dev-dependencies]
rand = "^0.8"
