[package]
name = "cargo-bolero"
version = "0.4.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "cargo command for running bolero fuzz tests"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "quickcheck", "property", "fuzz", "fuzzing"]
license = "MIT"
edition = "2018"
readme = "README.md"

[dependencies]
bolero-afl = { version = "0.4", path = "../bolero-afl", default-features = false, features = ["bin"] }
bolero-honggfuzz = { version = "0.4", path = "../bolero-honggfuzz", default-features = false, features = ["bin"] }
failure = "0.1"
structopt = "0.3"
tempfile = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
