[package]
name = "cargo-bolero"
version = "0.6.2"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "cargo command for running bolero fuzz tests"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "quickcheck", "property", "fuzz", "fuzzing"]
license = "MIT"
edition = "2018"
readme = "README.md"

[features]
default = ["afl", "libfuzzer"]
afl = ["bolero-afl"]
honggfuzz = ["bolero-honggfuzz"]
libfuzzer = []

[dependencies]
anyhow = "1.0"
bit-set = "0.5"
bolero-afl = { version = "0.6", path = "../bolero-afl", default-features = false, features = ["bin"], optional = true }
bolero-honggfuzz = { version = "0.6", path = "../bolero-honggfuzz", default-features = false, features = ["bin"], optional = true }
humantime = "2"
rustc_version = "0.4"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"

[dev-dependencies]
bolero = { version = "0.6", path = "../bolero" }

[[test]]
name = "fuzz_bytes"
path = "tests/fuzz_bytes/fuzz_target.rs"
harness = false

[[test]]
name = "fuzz_generator"
path = "tests/fuzz_generator/fuzz_target.rs"
harness = false
