[package]
name = "basic"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2018"

[dependencies]
arrayvec = "0.5"

[dev-dependencies]
bolero = { path = "../../bolero" }

[workspace]
members = ["."]

[[test]]
name = "fuzz_bytes"
path = "tests/fuzz_bytes/main.rs"
harness = false

[[test]]
name = "fuzz_generator"
path = "tests/fuzz_generator/main.rs"
harness = false

[[test]]
name = "fuzz_operations"
path = "tests/fuzz_operations/main.rs"
harness = false
