[package]
name = "bolero-afl"
version = "0.13.0"
authors = ["Cameron Bytheway <bythewc@amazon.com>"]
description = "afl plugin for bolero"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "fuzz", "fuzzing"]
license = "MIT"
edition = "2018"
readme = "../../README.md"

[features]
default = ["lib"]
bin = []
lib = ["bolero-engine"]

[dependencies]
bolero-engine = { version = "0.13", path = "../bolero-engine", optional = true }

[build-dependencies]
cc = "1.0"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
  'cfg(kani)',
  'cfg(fuzzing)',
  'cfg(fuzzing_afl)',
  'cfg(fuzzing_libfuzzer)',
  'cfg(fuzzing_honggfuzz)',
  'cfg(fuzzing_random)'
]
