[package]
name = "bolero-engine"
version = "0.10.2"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "fuzz and property testing framework"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "quickcheck", "property", "fuzz", "fuzzing"]
license = "MIT"
edition = "2018"
readme = "../../README.md"
rust-version = "1.57.0"

[features]
rng = ["rand", "bolero-generator/alloc"]

[dependencies]
anyhow = "1"
bolero-generator = { version = "0.10", path = "../bolero-generator", default-features = false }
lazy_static = "1"
pretty-hex = "0.3"
rand = { version = "0.8", optional = true }

[target.'cfg(not(kani))'.dependencies]
backtrace = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
bolero-generator = { path = "../bolero-generator", features = ["std"] }
rand = "^0.8"
