[package]
name = "bolero-engine"
version = "0.13.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "fuzz and property testing framework"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "quickcheck", "property", "fuzz", "fuzzing"]
license = "MIT"
edition = "2021"
readme = "../../README.md"
rust-version = "1.66.0"

[features]
any = ["bolero-generator/any"]
cache = ["bolero-generator/alloc"]
rng = ["rand", "rand_xoshiro", "bolero-generator/alloc"]

[dependencies]
anyhow = "1"
bolero-generator = { version = "0.13", path = "../bolero-generator", default-features = false }
lazy_static = "1"
pretty-hex = { version = "0.4", default-features = false }
rand = { version = "0.9", optional = true }
rand_xoshiro = { version = "0.7", optional = true }

[target.'cfg(not(kani))'.dependencies]
backtrace = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
bolero-generator = { version = "0.13", path = "../bolero-generator", features = ["std"] }
rand = "0.9"
rand_xoshiro = "0.7"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
  'cfg(kani)',
  'cfg(fuzzing)',
  'cfg(fuzzing_afl)',
  'cfg(fuzzing_libfuzzer)',
  'cfg(fuzzing_honggfuzz)',
  'cfg(fuzzing_random)'
]
