[package]
name = "bolero-generator-derive"
version = "0.13.3"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "value generator for testing and fuzzing"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "quickcheck", "property", "fuzz", "fuzzing"]
license = "MIT"
edition = "2021"
readme = "../bolero-generator/README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "2"
proc-macro2 = "1"
quote = "1"
# The `full` feature is required to correctly parse attributes
# TODO investigate if this can be reduced in scope
syn = { version = "2", features = ["full"] }
