[package]
name = "bolero-generator"
version = "0.11.1"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "value generator for testing and fuzzing"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "quickcheck", "property", "fuzz", "fuzzing"]
license = "MIT"
edition = "2021"
readme = "README.md"
rust-version = "1.66.0"

[features]
default = ["either", "std"]
std = ["alloc", "either/use_std"]
alloc = ["rand_core/alloc"]

[dependencies]
arbitrary = { version = "1.0", optional = true }
bolero-generator-derive = { version = "0.11", path = "../bolero-generator-derive" }
either = { version = "1.5", default-features = false, optional = true }
rand_core = { version = "0.6", default-features = false }

[dev-dependencies]
rand = "0.8"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
  'cfg(kani)',
  'cfg(fuzzing)',
  'cfg(fuzzing_afl)',
  'cfg(fuzzing_libfuzzer)',
  'cfg(fuzzing_honggfuzz)',
  'cfg(fuzzing_random)'
]
