[package]
name = "bolero-kani"
version = "0.12.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "kani plugin for bolero"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "model", "proof"]
license = "MIT"
edition = "2021"
readme = "../../README.md"

[features]
default = ["lib"]
bin = []
lib = ["bolero-engine"]

[dependencies]
bolero-engine = { version = "0.12", path = "../bolero-engine", optional = true }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
  'cfg(kani)',
  'cfg(fuzzing)',
  'cfg(fuzzing_afl)',
  'cfg(fuzzing_libfuzzer)',
  'cfg(fuzzing_honggfuzz)',
  'cfg(fuzzing_random)'
]
