[package]
name = "bolero-libafl"
version = "0.10.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "libafl plugin for bolero"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "fuzz", "fuzzing"]
license = "MIT"
edition = "2018"
readme = "../../README.md"

include = [
  "/src",
  "/Cargo.toml",
  "/build.rs",
  "/runtime",
  "!/runtime/target",
]

[features]
default = ["lib"]
bin = []
lib = ["bolero-engine"]

[dependencies]
bolero-engine = { version = "0.10", path = "../bolero-engine", optional = true }
