[package]
name = "bolero"
version = "0.11.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "fuzz and property testing front-end"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "quickcheck", "property", "fuzz", "fuzzing"]
license = "MIT"
edition = "2018"
readme = "../../README.md"
rust-version = "1.66.0"

[features]
default = ["std"]
std = ["alloc", "bolero-generator/std"]
alloc = ["bolero-generator/alloc"]
arbitrary = ["bolero-generator/arbitrary"]

[dependencies]
bolero-engine = { version = "0.11", path = "../bolero-engine" }
bolero-generator = { version = "0.11", path = "../bolero-generator", default-features = false }
cfg-if = "1"

[target.'cfg(fuzzing_afl)'.dependencies]
bolero-afl = { version = "0.11", path = "../bolero-afl" }

[target.'cfg(fuzzing_libfuzzer)'.dependencies]
bolero-libfuzzer = { version = "0.11", path = "../bolero-libfuzzer" }

[target.'cfg(fuzzing_honggfuzz)'.dependencies]
bolero-honggfuzz = { version = "0.11", path = "../bolero-honggfuzz" }

[target.'cfg(fuzzing_random)'.dependencies]
bolero-engine = { version = "0.11", path = "../bolero-engine", features = ["cache", "rng"] }
rand = { version = "0.8" }

[target.'cfg(kani)'.dependencies]
bolero-kani = { version = "0.11", path = "../bolero-kani" }

[target.'cfg(not(any(fuzzing, kani)))'.dependencies]
bolero-engine = { version = "0.11", path = "../bolero-engine", features = ["cache", "rng"] }
rand = { version = "0.8" }

[dev-dependencies]
rand = "0.8"
