[package]
name = "bolero"
version = "0.13.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
description = "fuzz and property testing front-end"
homepage = "https://github.com/camshaft/bolero"
repository = "https://github.com/camshaft/bolero"
keywords = ["testing", "quickcheck", "property", "fuzz", "fuzzing"]
license = "MIT"
edition = "2021"
readme = "../../README.md"
rust-version = "1.66.0"

[features]
default = ["std"]
std = ["alloc", "bolero-engine/any", "bolero-generator/std"]
alloc = ["bolero-generator/alloc"]
arbitrary = ["bolero-generator/arbitrary"]

[dependencies]
bolero-engine = { version = "0.13", path = "../bolero-engine" }
bolero-generator = { version = "0.13", path = "../bolero-generator", default-features = false }
cfg-if = "1"
[target.'cfg(fuzzing_afl)'.dependencies]
bolero-afl = { version = "0.13", path = "../bolero-afl" }

[target.'cfg(fuzzing_libfuzzer)'.dependencies]
bolero-libfuzzer = { version = "0.13", path = "../bolero-libfuzzer" }

[target.'cfg(fuzzing_honggfuzz)'.dependencies]
bolero-honggfuzz = { version = "0.13", path = "../bolero-honggfuzz" }

[target.'cfg(fuzzing_random)'.dependencies]
bolero-engine = { version = "0.13", path = "../bolero-engine", features = ["cache", "rng"] }
rand = { version = "0.9" }

[target.'cfg(kani)'.dependencies]
bolero-kani = { version = "0.13", path = "../bolero-kani" }

[target.'cfg(not(any(fuzzing, kani)))'.dependencies]
bolero-engine = { version = "0.13", path = "../bolero-engine", features = ["cache", "rng"] }
rand = { version = "0.9" }

[dev-dependencies]
rand = "0.9"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
  'cfg(kani)',
  'cfg(fuzzing)',
  'cfg(fuzzing_afl)',
  'cfg(fuzzing_libfuzzer)',
  'cfg(fuzzing_honggfuzz)',
  'cfg(fuzzing_random)'
]
